# SoroMint

./: .env.example  .gitignore  CONTRIBUTING_ISSUES.md  Cargo.toml  DAO_IMPLEMENTATION.md  IMPLEMENTATION_VERIFICATION.md  PR_webhook_integration.md  SUMMARY.md  create_github_issues.js  docker-compose.yml  verify-implementation.js
.github/: dependabot.yml
.github/workflows/: dependency-security-scan.yml
client/: index.html  package-lock.json  package.json  tailwind.config.js
client/src/: App.jsx  i18n.js  index.css  main.jsx
contracts/dividend/: Cargo.toml
contracts/flash_loan/: Cargo.toml
contracts/lottery/: Cargo.toml
contracts/streaming/: README.md
contracts/token/: Cargo.toml  test_output.txt
contracts/vault/: Cargo.toml
docs/: audit-logs.md  backend-auth.md  contract-api.md  dao-voting.md  env-variables.md  error-handling.md  event-indexer.md  external-metadata.md  factory-pattern.md  rate-limiting.md  redis-caching.md  rust-testing-guide.md  transfer-fees.md
server/: .env.example.redis  .eslintrc.json  event-indexer-worker.js  index.js  jest.config.js  knexfile.js  package.json  pnpm-lock.yaml
server/benchmarks/: README.md  run-health-benchmark.js
server/config/: cors-config.js  cors-origins.js  env-config.js  passport-config.js  redisClient.js  swagger.js
server/coverage/: clover.xml  coverage-final.json  lcov.info
server/docs/: backend-testing.md
server/examples/: dao-workflow.js  event-indexer-usage.js
server/load-tests/: all-scenarios.js  health.js  mixed.js  stream-create.js  stream-withdraw.js
server/middleware/: auth.js  (+4 more)
(+264 files in other folders)
