[workspace]
resolver = "2"

members = [
    "contracts/access",
    "contracts/compliance",
    "contracts/dividend",
    "contracts/factory",
    "contracts/lifecycle",
    "contracts/multisig",
    "contracts/oracle",
    "contracts/ownership",
    "contracts/token",
    "contracts/vault",
]



[profile.release]
opt-level = "z"
overflow-checks = true
debug = false
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
