[workspace]
resolver = "2"

members = [
    "contracts/access",
    "contracts/backstop",
    "contracts/compliance",
    "contracts/dividend",
    "contracts/factory",
    "contracts/lifecycle",
    "contracts/lottery",
    "contracts/multisig",
    "contracts/oracle",
    "contracts/ownership",
    "contracts/token",
    "contracts/upgradeable",
    "contracts/vault",
    "contracts/vesting",
]



[profile.release]
opt-level = "z"
overflow-checks = true
debug = false
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
